--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.3",
+    "@types/mapbox-gl": "^2.7.6",
     "bootstrap": "^5.2.2",
+    "mapbox-gl": "^2.10.0",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.6.0",
     "tslib": "^2.3.0",
